--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="row">
 
         <!-- Left side column contains search form and search history -->
-        <section class="col-md-4 p-2 flex-column d-flex align-items-center">
+        <section class="col-md-4 p-2 flex-column d-flex align-items-center border-end border-dark">
           <form class="d-flex p-3">
             <input class="user-input form-control form-control-lg" type="text" placeholder="Enter City Name">
             <button type="button" class="search-button btn btn-outline-dark btn-lg">Search</button>
