added function to display current weather conditions

--- a/index.html
+++ b/index.html
@@ -47,11 +47,13 @@
         <section class="col-md-8 p-4 flex-column">
           <div class="weather-card border border-dark p-3">
           <!-- ROWS: city & date, current temperature, wind speed, humidity, UV index -->
-            <div class="city-name">This</div>
-            <div class="current-temp">is</div>
-            <div class="wind-speed">the</div>
-            <div class="humidity">current</div>
-            <div class="uv-index">weather!</div>
+            <div class="city-name">
+              <h3></h3>
+            </div>
+            <div class="current-temp"></div>
+            <div class="wind-speed"></div>
+            <div class="humidity"></div>
+            <div class="uv-index"></div>
           </div>
           <!-- 5 Days of weather forecast -->
           <div class="forecast-cards flex-row mt-5">
