added UV color indicator

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="current-temp"></div>
             <div class="wind-speed"></div>
             <div class="humidity"></div>
-            <div class="uv-index"></div>
+            <div class="uv-index d-flex"></div>
           </div>
           <!-- 5 Days of weather forecast -->
           <div class="forecast-cards flex-row mt-5">
