fixed bug, missing period

--- a/index.html
+++ b/index.html
@@ -56,13 +56,10 @@
             <div class="uv-index d-flex"></div>
           </div>
           <!-- 5 Days of weather forecast -->
-          <div class="forecast-cards flex-row mt-5">
-            <span class="forecast bg-info p-3">Tomorrow</span>
+          <div class="forecast-cards mt-5">
+            <sdiv class="forecast p-3"></div>
             <!-- ROWS: city & date, current temperature, wind speed, humidity, UV index -->
-            <span class="forecast p-3 bg-info">Day After1</span>
-            <span class="forecast p-3 bg-info">Day After2</span>
-            <span class="forecast p-3 bg-info">Day After3</span>
-            <span class="forecast p-3 bg-info">Day After4</span>
+            
             
         </section>
       </div>
