made for loop for all forecast cards

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <!-- 5 Days of weather forecast -->
           <!-- <div class="forecast-cards flex-row mt-5"> -->
                         <!-- ROWS: city & date, current temperature, wind speed, humidity, UV index -->
-          <div class="forecast row mt-3">
+          <div class="forecast d-flex flex-wrap mt-3">
             <!-- <div class="forecast1 bg-info"></div>
             <div class="forecast2 bg-info"></div>
             <div class="forecast3 bg-info"></div>
