finished forecast card info

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
             <div class="humidity"></div>
             <div class="uv-index d-flex"></div>
           </div>
+          <div class="pt-5 px-2">
+            <h3>5 Day Forecast:</h3>
+          </div>
           <!-- 5 Days of weather forecast -->
           <!-- <div class="forecast-cards flex-row mt-5"> -->
                         <!-- ROWS: city & date, current temperature, wind speed, humidity, UV index -->
